--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Eric Solner's Hangman Game</title>
+    <link rel='stylesheet' href='assets/css/reset.css'>
     <link rel='stylesheet' href='assets/css/style.css'>
 </head>
 
